# Resume_analyzer

./: render.yaml
Backend/: main.py  pyproject.toml
Backend/app/: __init__.py
Backend/app/routes/: resume.py
Backend/app/services/: llm_service.py  resume_parser.py
Frontend/src/: App.tsx  index.css
Frontend/src/components/: FileUpload.tsx  ResumeAnalysis.tsx
Frontend/src/types/: resume.ts
